--- a/Task.Windows.Forms/App.config
+++ b/Task.Windows.Forms/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="AppUrl" value="http://localhost:12172/api/employee/" />
+    <add key="LocalHostWebApiUrl" value="http://localhost:12172/api/employee/" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
