--- a/Task.Web.Api/packages.config
+++ b/Task.Web.Api/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4-preview1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Extensions.Compression.Server" version="2.0.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4-preview1" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net461" />
@@ -18,6 +19,10 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Ninject" version="3.3.3" targetFramework="net461" />
+  <package id="Ninject.Extensions.NamedScope" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Web.Common.SelfHost" version="3.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.5" targetFramework="net461" />
