--- a/Task.Windows.Forms/Task.Windows.csproj
+++ b/Task.Windows.Forms/Task.Windows.csproj
@@ -62,10 +62,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\clsEmployeeRecord.cs" />
-    <Compile Include="Helper\HttpRequestVerb.cs" />
+    <Compile Include="Classes\EmployeeRecord.cs" />
+    <Compile Include="Helper\HttpRequestMethod.cs" />
     <Compile Include="Helper\UrlConfigSingleton.cs" />
-    <Compile Include="Helper\UrlRoute.cs" />
+    <Compile Include="Helper\EmployeeUrlRoute.cs" />
     <Compile Include="Mapper\AutoMapperConfig.cs" />
     <Compile Include="Mapper\MapProfile\RequestDataMapProfile.cs" />
     <Compile Include="Service\EmployeeService.cs" />
@@ -104,9 +104,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Task.DTO\Task.DTO.csproj">
       <Project>{5de20f61-a2ed-4d86-9722-2ea1b72149da}</Project>
