--- a/Task.Web.Api/packages.config
+++ b/Task.Web.Api/packages.config
@@ -5,6 +5,8 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="FluentValidation" version="7.2.1" targetFramework="net461" />
   <package id="FluentValidation.WebApi" version="7.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4-preview1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4-preview1" targetFramework="net461" />
@@ -12,6 +14,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4-preview1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
@@ -19,10 +22,6 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
-  <package id="Ninject" version="3.3.3" targetFramework="net461" />
-  <package id="Ninject.Extensions.NamedScope" version="3.3.0" targetFramework="net461" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
-  <package id="Ninject.Web.Common.SelfHost" version="3.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.5" targetFramework="net461" />
@@ -31,4 +30,5 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="Unity" version="5.5.8" targetFramework="net461" />
 </packages>
